--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,13 @@
   color: white;
   text-decoration: none;
 }
+
+.app-add-to-cart-btn > * {
+  padding-left: 0;
+  padding-right: 0;
+}
+img.app-thumbnail {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
